# Hangman-CLI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_assets.yml  main.yml  release.yml
docs/: README.txt
docs/source/: conf.py  index.rst
hangman/: ascii_art.py  hangman.py  install_script.sh  lexicon.py
