[tool.poetry]
name = "hangman-cli"
version = "1.2.0"
description = "The classic word game as a CLI app implemented in Python."
authors = ["Steve Daulton <stevedaulton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
flake8 = "^6.1.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
